--- a/topic01/book/00.Lab-01.md
+++ b/topic01/book/00.Lab-01.md
@@ -1,7 +1,14 @@
 #Objectives
 
-- Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-- Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-- Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+- Download and Install the software that we need
+- Make configuration changes to Eclipse so that we have the correct ste up
+
+##What you need
+- Latest [Java JDK 8](http://www.oracle.com/technetwork/java/javase/downloads/index.html)
+- [Eclipse Luna](https://eclipse.org/downloads/packages/eclipse-ide-java-developers/lunasr1a)
+- The [e(fx)clipse](http://efxclipse.bestsolution.at/install.html#all-in-one) plugin 
+- [Scene Builder 2.0](http://www.oracle.com/technetwork/java/javase/downloads/javafxscenebuilder-info-2157684.html) or greater
+
+
 
 
