--- a/topic01/book/01.01.md
+++ b/topic01/book/01.01.md
@@ -1,26 +1,36 @@
-#Title 1
+#Getting Started
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+Lets get started on our application, we will take it step by step and get started with getting the development environment set correctly so that eclipse knows where the jdk is and also where source builder lives.
 
-##Subtitle 
+##Eclipse setup 
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+Presuming you have downloaded all the software and installed it correctly (links in Lab-01) We need to tell Eclipse to use JDK 8 and also where it will find the Scene Builder:
 
-Links to a download:
+- Open the Eclipse Preferences and navigate to Java | Installed JREs.
 
-[archive.zip](./archives/archive.zip)
+- Click Add..., select Standard VM and choose the installation Directory of your JDK 8.
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+- Remove the other JREs or JDKs so that the JDK 8 becomes the default.
 
-- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-Some images:
+*Preferences - Java - Installed JREs.*
 
 ![](./img/01.png)
 
-- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+*Preferences - Java - Complier.*
 
-Images with a caption:
+![](./img/02.png)
 
-![Figure 1](./img/02.png)
+- Navigate to the JavaFX preferences. Specify the path to your Scene Builder executable.
+
+*Preferences - JavaFX*
+
+![](./img/03.png)
+
+#Helpful Links
+
+-[JavaDoc](http://docs.oracle.com/javase/8/docs/api/) for the standard Java classes
+-[JavaDoc](http://docs.oracle.com/javase/8/javafx/api/) for JavaFX classes
+-[Official JavaFX Tutorials](http://docs.oracle.com/javase/8/javafx/get-started-tutorial/get_start_apps.htm) by Oracle
+
+
+
