--- a/topic01/book/02.02.md
+++ b/topic01/book/02.02.md
@@ -1,49 +1,57 @@
-#Title 2
+#Create a new JavaFX Project
 
-##Subtitle 
+##Start here 
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+- In Eclipse (with e(fx)clipse installed) go to _File | New | Other..._ and choose JavaFX Project.
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+- Specify the Name of the project (e.g. AddressApp) and click Finish.
 
-~~~html
-  <header class="ui middle aligned two column raised grid segment"> 
-    <div class="row">
-      <div class="column">
-       <h1> {{course.title}} </h1>
-      </div>
-      <div class="column">
-        <img class="ui medium image floated right" src="./style/custom/logo.png"/>
-      </div> 
-    </div>
-  </header>
-~~~
+- Remove the application package and its content if it was automatically created.
+
+##Create the Packages
+
+-Right from the start we will follow good software design principles. One very important principle is that of [Model-View-Controller](http://en.wikipedia.org/wiki/Model%E2%80%93view%E2%80%93controller) (MVC). According to this we divide our code into three units and create a package for each (Right-click on the src-folder, _New... | Package):_
 
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+![](./img/02.01.png)
 
-Code Block for Java:
+
+Code Block for hellowWoeld in JavaFX:
 
 ~~~java
-  public static Result updateUser(Long id)
-  {
-    Result result = notFound();
-    User user = User.findById(id);
-    if (user != null)
-    {
-      User updatedUser = renderUser(request().body().asJson().toString());
-      user.update(updatedUser);
-      user.save();
-      result = ok(renderUser(user));
+  package helloworld;
+ 
+import javafx.application.Application;
+import javafx.event.ActionEvent;
+import javafx.event.EventHandler;
+import javafx.scene.Scene;
+import javafx.scene.control.Button;
+import javafx.scene.layout.StackPane;
+import javafx.stage.Stage;
+ 
+public class HelloWorld extends Application {
+    public static void main(String[] args) {
+        launch(args);
     }
-    return result;
-  }
+    
+    @Override
+    public void start(Stage primaryStage) {
+        primaryStage.setTitle("Hello World!");
+        Button btn = new Button();
+        btn.setText("Say 'Hello World'");
+        btn.setOnAction(new EventHandler<ActionEvent>() {
+ 
+            @Override
+            public void handle(ActionEvent event) {
+                System.out.println("Hello World!");
+            }
+        });
+        
+        StackPane root = new StackPane();
+        root.getChildren().add(btn);
+        primaryStage.setScene(new Scene(root, 300, 250));
+        primaryStage.show();
+    }
+}
 ~~~
-
-- Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-![Figure 1](./img/03.png)
-
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
 
