--- a/topic02/book/01.01.md
+++ b/topic02/book/01.01.md
@@ -4,9 +4,7 @@ A ["Hello, world!"](http://www.thehelloworldprogram.com/) program has become the
 
 ##Create the Application
 
-- Create a new JavaFX Project by selecting File, and then choosing New and then Other.
-
-- In the New wizard, expand the JavaFX folder and choose JavaFX Project. Click Next.
+- Create a new JavaFX Project by selecting File, and then choosing New Project.
 
 - In the New Java Project dialog box, enter HelloWorld for the Project Name
 
@@ -14,7 +12,12 @@ HelloWorld
 
 ![](./img/01.png)
 
-- In the Details section of the Java Settings dialog box, click Link additional source option. The Link Source dialog box is displayed.
+- In the package explorer window (on the left), click on the HelloWorld Project and right click (ctrl+click on the mac) and create a new class calle HelloWorld
 
-- Click Browse and navigate to the location of the src folder for the Scene Builder HelloWorld sample application and click OK
+![](./img/02.png)
 
+- Call this new Class HelloWorld and click finish (take all te defaults)
+
+![](./img/03.png)
+
+- Now you will have a java programm called HelloWorld.java in your 
