--- a/topic02/book/00.Lab-02.md
+++ b/topic02/book/00.Lab-02.md
@@ -1,5 +1,8 @@
 #Objectives
 
-- Examine some of the basics 
+Create the [Hello World](http://en.wikipedia.org/wiki/%22Hello,_world!%22_program) Program using;
+
+1. Eclipse
+2. Scene Builder
 
 
