--- a/topic02/book/01.01.md
+++ b/topic02/book/01.01.md
@@ -4,20 +4,56 @@ A ["Hello, world!"](http://www.thehelloworldprogram.com/) program has become the
 
 ##Create the Application
 
-- Create a new JavaFX Project by selecting File, and then choosing New Project.
+Open Eclipse and great a new JavaFX project - _New, Project, JavaFX, JavaFX Project_ - call it _HelloWorldPackage_ 
 
-- In the New Java Project dialog box, enter HelloWorld for the Project Name
+![](./img/02.01.png)
 
-HelloWorld
+followed by 
 
-![](./img/01.png)
+![](./img/02.02.png)
 
-- In the package explorer window (on the left), click on the HelloWorld Project and right click (ctrl+click on the mac) and create a new class calle HelloWorld
+If you look in the package Exploer to the left you will see you new packake called _HelloWorldPackage_
 
-![](./img/02.png)
+![](./img/02.03.png)
 
-- Call this new Class HelloWorld and click finish (take all te defaults)
+In that package you will the following structure:
 
-![](./img/03.png)
+1. **src** (Source Folder)
+2. **application** (this is where you programmes will be stored)
+3. the actual programms which will include **main.java** and **application.css**
 
-- Now you will have a java programm called HelloWorld.java in your 
+![](./img/02.04.png)
+
+When your finished doing that you should open the main class (main.java) and you should have code like the following:
+
+~~~java
+package application;
+	
+import javafx.application.Application;
+import javafx.stage.Stage;
+import javafx.scene.Scene;
+import javafx.scene.layout.BorderPane;
+
+
+public class Main extends Application {
+	@Override
+	public void start(Stage primaryStage) {
+		try {
+			BorderPane root = new BorderPane();
+			Scene scene = new Scene(root,400,400);
+			scene.getStylesheets().add(getClass().getResource("application.css").toExternalForm());
+			primaryStage.setScene(scene);
+			primaryStage.show();
+		} catch(Exception e) {
+			e.printStackTrace();
+		}
+	}
+	
+	public static void main(String[] args) {
+		launch(args);
+	}
+}
+~~~
+
+If you **Run** the program you should see a blank window
+
